[MODORDERS-1343] Simplify debug logs